objects/Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Fees__c</fullName>
        <formula>IF( ISPICKVAL( Class__c , &quot;Fifth&quot;) , 5000,  IF( ISPICKVAL(Class__c, &quot;Sixth&quot;) , 6000,  IF(ISPICKVAL(Class__c, &quot;Seventh&quot;), 7000,  IF(ISPICKVAL(Class__c, &quot;Eighth&quot;), 8000,  IF(ISPICKVAL(Class__c, &quot;Ninth&quot;), 9000,  IF(ISPICKVAL(Class__c, &quot;Tenth&quot;), 10000, 0) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fifth</fullName>
                </value>
                <value>
                    <fullName>Sixth</fullName>
                </value>
                <value>
                    <fullName>Seventh</fullName>
                </value>
                <value>
                    <fullName>Eighth</fullName>
                </value>
                <value>
                    <fullName>Ninth</fullName>
                </value>
                <value>
                    <fullName>Tenth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_no__c</fullName>
        <label>Id no</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusFees__c</fullName>
        <label>BusFees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Studying_at__c</fullName>
        <label>Studying at</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SpecialBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SpecialBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnlineClasses__c</fullName>
        <label>OnlineClasses?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online Classes</fullName>
                </value>
                <value>
                    <fullName>Offline Classes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>OnlineStudents</fullName>
        <active>true</active>
        <label>OnlineStudents</label>
    </recordTypes>
    <recordTypes>
        <fullName>OfflineStudents</fullName>
        <active>true</active>
        <label>OfflineStudents</label>
    </recordTypes>
    <validationRules>
        <fullName>schoolMandate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Studying_at__c )</errorConditionFormula>
        <errorMessage>School should be selected</errorMessage>
    </validationRules>
</CustomObject>